<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">bibclient</string>
    <string name="button_list_books">Anzeigen</string>
    <string name="text_list_books">Bücher:</string>
    <string name="bookIconText">Book Icon</string>
    <string name="error_connection">Verbindung zum Server fehlgeschlagen</string>
    <string name="error_data">Daten vom Server nicht lesbar</string>
    <string name="string_author">Autor</string>
    <string name="string_title">Titel</string>
    <string name="string_isbn">ISBN</string>
    <string name="title_activity_show_book">ShowBookActivity</string>
    <string name="book_transmitted">Buch erfolgreich eingefügt</string>
    <string name="book_not_transmitted">FEHLER: Übertragung fehlgeschlagen</string>
    <string name="text_view">TextView</string>
    <string name="title_activity_books">Books</string>
    <string name="button_login">Login</string>
    <string name="button_gastzugang">Gast</string>
    <string name="textView_Name_Impressum">Öffentliche Schulbibliothek Rockwinkel</string>
    <string name="textView_Strasse_Impressum">Upper Angst 31</string>
    <string name="textView_PLZ_Impressum">28355 Bremen</string>
    <string name="textView_Impressum">Impressum:</string>
    <string name="textView_Ort_Impressum">in der Oberschule Rockwinkel</string>
    <string name="textView_Phone_Impressum">Telefon 361-3360</string>
    <string name="textView_Oeffnungszeiten">Öffnungszeiten:</string>
    <string name="textView_OffenMo">Mo: 8:30 - 12:30, 13:00 - 17:00</string>
    <string name="textView_OffenDi">Di: 8:30 - 12:30, 13:00 - 14:00</string>
    <string name="textView_OffenMi">Mi: 8:30 - 12:30, 13:00 - 14:00</string>
    <string name="textView_OffenDo">Do: 8:30 - 12:30, 13:00 - 17:00</string>
    <string name="textView_OffenFr">Fr: 8:30 - 12:30, 13:00 - 14:00</string>
    <string name="title_activity_impressum">Impressum</string>
    <string name="editText_username">Username</string>
    <string name="editText_password">Passwort</string>
    <string name="title_activity_mainguest">Gast MainActivity</string>
</resources>