<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    
		<TextView
            android:id="@+id/textView_Impressum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="42dp"
            android:layout_marginTop="36dp"
            android:textSize="25sp"
            android:text="@string/textView_Impressum" />
        

		<TextView
		    android:id="@+id/textView_PLZ"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignLeft="@+id/textView_Impressum"
		    android:layout_below="@+id/textView_Impressum"
		    android:layout_marginTop="110dp"
		    android:text="@string/textView_PLZ_Impressum" />
		
		<TextView
		    android:id="@+id/textView_Phone"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignLeft="@+id/textView_Impressum"
		    android:layout_below="@+id/textView_Impressum"
		    android:layout_marginTop="140dp"
		    android:text="@string/textView_Phone_Impressum" />

		<TextView
		    android:id="@+id/textView_Ort"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignLeft="@+id/textView_Impressum"
		    android:layout_below="@+id/textView_Impressum"
		    android:layout_marginTop="50dp"
		    android:text="@string/textView_Ort_Impressum" />

		<TextView
		    android:id="@+id/textView_Strasse"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignLeft="@+id/textView_Impressum"
		    android:layout_below="@+id/textView_Impressum"
		    android:layout_marginTop="80dp"
		    android:text="@string/textView_Strasse_Impressum" />

		<TextView
		    android:id="@+id/textView_Name"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignLeft="@+id/textView_Impressum"
		    android:layout_below="@+id/textView_Impressum"
		    android:layout_marginTop="20dp"
		    android:text="@string/textView_Name_Impressum" />

		<TextView
		    android:id="@+id/textView_OffenMo"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignLeft="@+id/textView_Impressum"
		    android:layout_below="@+id/textView_Impressum"
		    android:layout_marginTop="210dp"
		    android:text="@string/textView_OffenMo" />
		
		<TextView
		    android:id="@+id/textView_OffenDi"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignLeft="@+id/textView_Impressum"
		    android:layout_below="@+id/textView_Impressum"
		    android:layout_marginTop="240dp"
		    android:text="@string/textView_OffenDi" />
				
		<TextView
		    android:id="@+id/textView_OffenMi"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignLeft="@+id/textView_Impressum"
		    android:layout_below="@+id/textView_Impressum"
		    android:layout_marginTop="270dp"
		    android:text="@string/textView_OffenMi" />
						
		<TextView
		    android:id="@+id/textView_OffenDo"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignLeft="@+id/textView_Impressum"
		    android:layout_below="@+id/textView_Impressum"
		    android:layout_marginTop="300dp"
		    android:text="@string/textView_OffenDo" />

		<TextView
		    android:id="@+id/textView_OffenFr"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignLeft="@+id/textView_Impressum"
		    android:layout_below="@+id/textView_Impressum"
		    android:layout_marginTop="330dp"
		    android:text="@string/textView_OffenFr" />

		<TextView
		    android:id="@+id/textView_Oeffnungszeiten"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignLeft="@+id/textView_Impressum"
		    android:layout_below="@+id/textView_Impressum"
		    android:layout_centerVertical="true"
			android:layout_marginTop="175dp"
		    android:text="@string/textView_Oeffnungszeiten"
		    android:textSize="17sp" />
				
</RelativeLayout>
